Fix: Move Python function to serverless/ directory to avoid Next.js /api conflict
- Moved api/index.py to serverless/index.py to avoid Next.js /api route conflicts
- Updated vercel.json to route /api/* requests to serverless/index.py
- Next.js reserves /api directory for its own API routes, causing 404 errors
- Frontend still calls /api/chat, which is now correctly routed to Python function

--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/next"
+      "src": "serverless/index.py",
+      "use": "@vercel/python"
     },
     {
-      "src": "api/index.py",
-      "use": "@vercel/python"
+      "src": "frontend/package.json",
+      "use": "@vercel/next"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/index.py"
+      "dest": "/serverless/index.py"
     },
     {
       "src": "/(.*)",
@@ -22,5 +22,10 @@
   ],
   "env": {
     "PYTHON_VERSION": "3.12"
+  },
+  "functions": {
+    "serverless/index.py": {
+      "runtime": "python3.12"
+    }
   }
 }
