--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "serverless/index.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     },
     {
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/serverless/index.py"
+      "dest": "/api/index.py"
     },
     {
       "src": "/(.*)",
@@ -24,7 +24,7 @@
     "PYTHON_VERSION": "3.12"
   },
   "functions": {
-    "serverless/index.py": {
+    "api/index.py": {
       "runtime": "python3.12"
     }
   }
