Fix vercel.json: Remove deprecated builds property, use functions only
- Removed builds property (deprecated, conflicts with functions)
- Kept functions property for Python runtime configuration (modern approach)
- Added buildCommand, outputDirectory, and installCommand for Next.js in subdirectory
- Python functions in api/ are auto-detected by Vercel
- This resolves the 'functions and builds cannot be used together' error

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/next"
-    }
-  ],
   "routes": [
     {
       "src": "/api/(.*)",
@@ -24,8 +14,11 @@
     "PYTHON_VERSION": "3.12"
   },
   "functions": {
-    "api/index.py": {
+    "api/*.py": {
       "runtime": "python3.12"
     }
-  }
+  },
+  "buildCommand": "cd frontend && npm install && npm run build",
+  "outputDirectory": "frontend/.next",
+  "installCommand": "cd frontend && npm install"
 }
