--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
   },
   "functions": {
     "api/*.py": {
-      "runtime": "python3.12"
+      "runtime": "@vercel/python@3.12"
     }
   },
   "buildCommand": "cd frontend && npm install && npm run build",
