Fix Next.js routing: Use rewrites instead of routes for frontend
- Removed incorrect route to /frontend/cd /Users/adrianbarcan/Projects/The-AI-Engineer-Challenge && git add vercel.json && git commit -m "Fix Next.js routing: Use rewrites instead of routes for frontend

- Removed incorrect route to /frontend/$1 (Next.js output is at root)
- Added rewrites to handle all non-API routes and let Next.js handle routing
- When using builds with @vercel/next, Next.js output is served at root level
- This resolves the NOT_FOUND error for the frontend pages" (Next.js output is at root)
- Added rewrites to handle all non-API routes and let Next.js handle routing
- When using builds with @vercel/next, Next.js output is served at root level
- This resolves the NOT_FOUND error for the frontend pages

--- a/vercel.json
+++ b/vercel.json
@@ -10,10 +10,12 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/index.py"
-    },
+    }
+  ],
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/frontend/$1"
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
