--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,20 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/next"
+    { "src": "frontend/package.json", "use": "@vercel/next" },
+    { 
+      "src": "api/app.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.py"
+    { 
+      "src": "/api/(.*)", 
+      "dest": "api/app.py"
     },
-    {
-      "handle": "filesystem"
+    { 
+      "src": "/(.*)", 
+      "dest": "frontend/$1"
     }
   ]
-}
+} 
