--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,27 @@
 {
   "version": 2,
+  "buildCommand": "cd frontend && npm install && npm run build",
+  "outputDirectory": "frontend/.next",
+  "framework": "nextjs",
+  "installCommand": "cd frontend && npm install",
   "builds": [
-    { "src": "frontend/package.json", "use": "@vercel/next" },
-    { 
-      "src": "api/app.py",
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/next"
+    },
+    {
+      "src": "api/index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
-    { 
-      "src": "/api/(.*)", 
-      "dest": "api/app.py"
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.py"
     },
-    { 
-      "src": "/(.*)", 
-      "dest": "frontend/$1"
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/$1"
     }
   ]
-} 
+}
